--- a/about/index.html
+++ b/about/index.html
@@ -3,11 +3,11 @@
 
 	<head>
 		
-<title>個人簡介-Quiet</title>
+<title>個人簡介-KameLam</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="shortcut icon" type="image/x-icon" href="/image/favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="/image/logo.png">
 
 <meta name="keywords" content="Kame,python">
 <meta name="description" content="描述">
@@ -133,7 +133,7 @@
     </ul>
     <div class="my_foot">
         
-        <a target="_blank" rel="noopener" href="https://github.com/qiaobug">
+        <a target="_blank" rel="noopener" href="https://github.com/kame2lam">
             <img src="https://cdn.jsdelivr.net/gh/duogongneng/MyBlogImg/imggithub.png" alt="Quiet主题">
         </a>
         
@@ -239,7 +239,7 @@
 
 <div class="header-bg">
     <div class="bg-content">
-        <img src="" alt="Q">
+        <img src="/image/logo.png" alt="Q">
         <h1> Kame Lam
             <span></span>
         </h1>
@@ -269,7 +269,7 @@
 	</div>
 	<div class="contact">
 		
-		<a target="_blank" rel="noopener" href="https://github.com/qiaobug">
+		<a target="_blank" rel="noopener" href="https://github.com/kame2lam">
 			<img src="https://cdn.jsdelivr.net/gh/duogongneng/MyBlogImg/imggithub.png" alt="Quiet主题">
 		</a>
 		
